Changes in Caudium 1.0.XX
-------------------------
- Removed old network neighbourhood code.
- Fixed bug in connection timeout code. When running in non-threaded
  mode, long connections (ie large downloads) would be timed out
  incorrectly.
- Fixed a couple of problem related to ssl3.
- Fixed <if variable> to work with scopes.

Changes in Caudium 1.0.34 (stable release 1, 2001-03-22)
--------------------------------------------------------
- Removed htmlparse dependency from the Enhanced Directory Listings
  module since we have two parsing modules now.
- Quote the chars < > @ in http_encode_url and http_encode_string.
- *** Removed CAMAS since it's not stable. Use the 1.1 version if you want
  *** to use it (either CVS or a snapshot).
- Correctly find libraries for various versions of Sablotron (0.50 and
  0.44 tested). 
- Fixed a bug in Caudium.ParseHTTP->create (http2.pike fix).
- Applied Chris Davies custom changes to the SQL User Database. These add a
  configurable timeout for cached user entries and an option to block sites
  with too many failed authentication attempts.
- Fixed some bugs in the XSLT Template module, added more configurable
  options. Also fixed the setting of the base uri.
- MSIE doesn't send the Pragma: no-cache header when you reload a
  page. This makes it really hard to reload certain things in Caudium,
  since that header is used to determine if the cache should or
  shouldn't be used. To solve this problem you can now use the
  prestate (nocache) to emulate this behavior. 
- Added new special token to the access log file name format. %H will
  be replaced with the hostname Caudium is running on. Useful if you
  use the same configuration file for multiple machines.
- New feature: access log files are now not opened until they are
  used. Also there is a configurable maximum idle time after which the
  log will be closed (can be disabled). Also made the "reopen timeout"